main page added
no burger animation width>991

--- a/agency.html
+++ b/agency.html
@@ -13,7 +13,7 @@
 						<meta charset="UTF-8">
 						<meta name="format-detection" content="telephone=no">
 						<!-- <style>body{opacity: 0;}</style> -->
-						<link rel="stylesheet" href="css/style.min.css?_v=20221226222839">
+						<link rel="stylesheet" href="css/style.min.css?_v=20230111230249">
 						<link rel="shortcut icon" href="favicon.ico">
 						<!-- <meta name="robots" content="noindex, nofollow"> -->
 						<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,46 +73,87 @@
 								</div>
 							</header>
 							<main class="page">
+
+								<!-- <section class="section-agency">
+                                        <div class="webdev-section__container">
+                                            <div class="webdev-section__tag-list tag-list">
+                                                <div class="card__tag_webdev">Разработка</div>
+                                                <div class="card__tag_webdev">Веб-дизайн</div>
+                                            </div>
+                                            <div class="webdev-section__webdev-tittle">Корпоративный сайт юридической фирмы IPLC</div>
+                                        </div>
+                                        <picture><source srcset="img/website-example/tittlebg.webp" type="image/webp"><img class="webdev-section__bg-image" src="img/website-example/tittlebg.png" alt=""></picture>
+                                        <div class="section-goals__container-flex-columns container-flex-columns">
+                                            <div class="container-flex-columns__left-column">
+                                                <div class="container-flex-columns__content">
+                                                    <div class="webdev-section__works-list-tittle">2022</div>
+                                                    <ul class="webdev-section__works-list">
+                                                        <li class="webdev-section__item-works-list">Аналитика</li>
+                                                        <li class="webdev-section__item-works-list">UX/UI-дизайн</li>
+                                                        <li class="webdev-section__item-works-list">Frontend</li>
+                                                        <li class="webdev-section__item-works-list">Backend</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="container-flex-columns__right-column">
+                                                <div class="container-flex-columns__content">
+                                                    <div class="webdev-section__iplc-section-right-tittle">IPLC</div>
+                                                    <div class="webdev-section__iplc-section-right-text">IPLC - сервис предоставляющий комплексное решение для защиты интеллектуальной собственности. Сочетание патентной, юридической и образовательной практики для бизнеса.</div>
+                                                    <a class="webdev-section__iplc-section-right-href _icon-br-arr">Перейти на сайт</a>    
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </section> -->
+
+
+
 								<div class="page__section section">
-									<div class="section__agency agency-section">
+									<section class="section__agency agency-section">
 										<div class="agency-section__container">
-											<div class="agency-section__page-tittle page-tittle">агенство</div>
-											<div class="agency-section__container-flex-columns container-flex-columns">
-												<div class="container-flex-columns__left-column">
-													<div class="agency-section__empty-block"></div>
-												</div>
-												<div class="container-flex-columns__right-column">
-													<div class="agency-section__agency-subtittle">
-														<span>Digitally</span> - уверенный стартап с бекраундом. С 2014 года мы создаем уникальные и современные digital-решения, которые продают.
-													</div>
+											<div class="agency-section__tittle-wrapper">
+												<div class="agency-section__page-tittle page-tittle">агенство</div>
+											</div>
+										</div>
+										<div class="agency-section__container-flex-columns_dynamic container-flex-columns_dynamic">
+											<div class="container-flex-columns_dynamic__left-column_dynamic">
+												<div class="container-flex-columns_dynamic__empty-block_dynamic"></div>
+											</div>
+											<div class="container-flex-columns_dynamic__right-column_dynamic">
+												<div class="agency-section__agency-subtittle">
+													<span>Digitally</span> - уверенный стартап с бекраундом. С 2014 года мы создаем уникальные и современные digital-решения, которые продают.
 												</div>
 											</div>
 										</div>
+
 										<div class="agency-section__text-slider">
 											<div class="agency-section__running-text"></div>
 										</div>
-										<div class="agency-section__container">
-											<div class="agency-section__seo">
-												<picture><source srcset="img/agency/ps.webp" type="image/webp"><img src="img/agency/ps.png" alt=""></picture>
-												<div class="agency-section__video-player"></div>
-												<div class="agency-section__text">Александр Громов о создании и развитии Студии</div>
+										<div class="agency-section__seo seo-agency-section">
+											<div class="seo-agency-section__container">
+												<div class="seo-agency-section__video-wrapper">
+													<picture><source srcset="img/agency/ps.webp" type="image/webp"><img class="seo-agency-section__video-image" src="img/agency/ps.png" alt=""></picture>
+												</div>
+												<div class="seo-agency-section__text">Александр Громов о создании и развитии Студии</div>
 											</div>
+											<!-- <div class="agency-section__video-player"></div>    -->
 										</div>
 										<div class="agency-section__bg-image">
-											<picture><source srcset="img/agency/bg.webp" type="image/webp"><img class="agency-section__img" src="img/agency/bg.png" alt=""></picture>
+											<div class="agency-section__img">
+												<picture><source srcset="img/agency/bg.webp" type="image/webp"><img class="agency-section__image" src="img/agency/bg.png" alt=""></picture>
+											</div>
 											<div class="agency-section__container">
-												<ul class="portfolio-section__statistic statictic-list">
-													<li class="statictic-list__item">
-														<div class="statictic-list__number_y">12</div>
-														<div class="statictic-list__text">лет опыт<br>в сфере digital</div>
+												<ul class="agency-section__statistic statictic-list_agency">
+													<li class="statictic-list_agency__item_agency">
+														<div class="statictic-list_agency__number_agency-y">12</div>
+														<div class="statictic-list_agency__text_agency">лет опыт<br>в сфере digital</div>
 													</li>
-													<li class="statictic-list__item">
-														<div class="statictic-list__number">36</div>
-														<div class="statictic-list__text">специалистов<br> в штате</div>
+													<li class="statictic-list_agency__item_agency">
+														<div class="statictic-list_agency__number_agency">36</div>
+														<div class="statictic-list_agency__text_agency">специалистов<br> в штате</div>
 													</li>
-													<li class="statictic-list__item">
-														<div class="statictic-list__number_c">20</div>
-														<div class="statictic-list__text">довольных<br>клиентов</div>
+													<li class="statictic-list_agency__item_agency">
+														<div class="statictic-list_agency__number_agency-c">20</div>
+														<div class="statictic-list_agency__text_agency">довольных<br>клиентов</div>
 													</li>
 												</ul>
 											</div>
@@ -142,62 +183,84 @@
 												<div class="section__section-name_agency">КОМАНДА</div>
 											</div>
 										</div>
-										<div class="agency-section__container-flex-columns container-flex-columns">
-											<div class="container-flex-columns__left-column">
-												<div class="agency-section__empty-block"></div>
+										<div class="agency-section__container-flex-columns_dynamic container-flex-columns_dynamic">
+											<div class="container-flex-columns_dynamic__left-column_dynamic">
+												<div class="container-flex-columns_dynamic__empty-block"></div>
 											</div>
-											<div class="container-flex-columns__right-column">
+											<div class="container-flex-columns_dynamic__right-column_dynamic">
 												<div class="agency-section__team-text">Люди — это основа нашего сообщества. В Digitally работают на совесть уже более 20 человек по всему миру</div>
 											</div>
 										</div>
 										<div class="agency-section__container">
-											<div class="agency-section__agency-container-flex-columns agency-container-flex-columns">
-												<div class="agency-container-flex-columns__agency-left-column">
-													<div class="container-flex-columns__team-card team-card">
-														<div class="team-card__image"><picture><source srcset="img/agency/a.webp" type="image/webp"><img src="img/agency/a.png" alt=""></picture></div>
-														<div class="team-card__subtittle">Александр Громов</div>
-														<div class="team-card__text">соучредитель</div>
-													</div>
-													<div class="agency-section__mini-container mini-container">
-														<div class="mini-container__mini-l-column">
-															<div class="container-flex-columns__team-card team-card">
-																<div class="team-card__image"><picture><source srcset="img/agency/1.webp" type="image/webp"><img src="img/agency/1.png" alt=""></picture></div>
-																<div class="team-card__subtittle">Александр Громов</div>
-																<div class="team-card__text">соучредитель</div>
+											<div class="agency-section__team-photos-cards team-photos-cards">
+												<ul class="team-photos-cards__photo-collection">
+													<li class="team-photos-cards__item member-card-1">
+														<div class="member-card__content">
+															<div class="member-card__header">
+																<div class="member-card__big-image-wrapper"><picture><source srcset="img/agency/a.webp" type="image/webp"><img class="member-card__big-image" src="img/agency/a.png" alt=""></picture></div>
+															</div>
+															<div class="member-card__body">
+																<div class="member-card__name">Александр Громов</div>
+																<div class="member-card__job-tittle">соучредитель</div>
 															</div>
 														</div>
-														<div class="mini-container__mini-r-column">
-															<div class="container-flex-columns__team-card team-card">
-																<div class="team-card__image"><picture><source srcset="img/agency/2.webp" type="image/webp"><img src="img/agency/2.png" alt=""></picture></div>
-																<div class="team-card__subtittle">Андрей Бобаков</div>
-																<div class="team-card__text">соучредитель</div>
+													</li>
+													<li class="team-photos-cards__item member-card-2">
+														<div class="member-card__content">
+															<div class="member-card__header">
+																<div class="member-card__big-image-wrapper"><picture><source srcset="img/agency/b.webp" type="image/webp"><img class="member-card__big-image" src="img/agency/b.png" alt=""></picture></div>
+															</div>
+															<div class="member-card__body">
+																<div class="member-card__name">Андрей Бобаков</div>
+																<div class="member-card__job-tittle">соучредитель</div>
 															</div>
 														</div>
-													</div>
-												</div>
-												<div class="agency-container-flex-columns__agency-right-column">
-													<div class="container-flex-columns__team-card team-card">
-														<div class="team-card__image"><picture><source srcset="img/agency/b.webp" type="image/webp"><img src="img/agency/b.png" alt=""></picture></div>
-														<div class="team-card__subtittle">Андрей Бобаков</div>
-														<div class="team-card__text">соучредитель</div>
-													</div>
-													<div class="agency-section__mini-container mini-container">
-														<div class="mini-container__mini-l-column">
-															<div class="container-flex-columns__team-card team-card">
-																<div class="team-card__image"><picture><source srcset="img/agency/3.webp" type="image/webp"><img src="img/agency/3.png" alt=""></picture></div>
-																<div class="team-card__subtittle">Селезнев Илья</div>
-																<div class="team-card__text">дизайнер</div>
+													</li>
+													<li class="team-photos-cards__item member-card_small">
+														<div class="member-card_small__content">
+															<div class="member-card_small__header">
+																<div class="member-card__small-image-wrapper"><picture><source srcset="img/agency/1.webp" type="image/webp"><img class="member-card__small-image" src="img/agency/1.png" alt=""></picture></div>
+															</div>
+															<div class="member-card_small__body">
+																<div class="member-card_small__name">Александр Громов</div>
+																<div class="member-card_small__job-tittle">соучредитель</div>
 															</div>
 														</div>
-														<div class="mini-container__mini-r-column">
-															<div class="container-flex-columns__team-card team-card">
-																<div class="team-card__image"><picture><source srcset="img/agency/4.webp" type="image/webp"><img src="img/agency/4.png" alt=""></picture></div>
-																<div class="team-card__subtittle">Андрей Бобаков</div>
-																<div class="team-card__text">соучредитель</div>
+													</li>
+													<li class="team-photos-cards__item member-card_small">
+														<div class="member-card_small__content">
+															<div class="member-card_small__header">
+																<div class="member-card__small-image-wrapper"><picture><source srcset="img/agency/2.webp" type="image/webp"><img class="member-card__small-image" src="img/agency/2.png" alt=""></picture></div>
+															</div>
+															<div class="member-card_small__body">
+																<div class="member-card_small__name">Андрей Бобаков</div>
+																<div class="member-card_small__job-tittle">соучредитель</div>
 															</div>
 														</div>
-													</div>
-												</div>
+													</li>
+													<li class="team-photos-cards__item member-card_small">
+														<div class="member-card_small__content">
+															<div class="member-card_small__header">
+																<div class="member-card__small-image-wrapper"><picture><source srcset="img/agency/3.webp" type="image/webp"><img class="member-card__small-image" src="img/agency/3.png" alt=""></picture></div>
+															</div>
+															<div class="member-card_small__body">
+																<div class="member-card_small__name">Александр Громов</div>
+																<div class="member-card_small__job-tittle">дизайнер</div>
+															</div>
+														</div>
+													</li>
+													<li class="team-photos-cards__item member-card_small">
+														<div class="member-card_small__content">
+															<div class="member-card_small__header">
+																<div class="member-card__small-image-wrapper"><picture><source srcset="img/agency/4.webp" type="image/webp"><img class="member-card__small-image" src="img/agency/4.png" alt=""></picture></div>
+															</div>
+															<div class="member-card_small__body">
+																<div class="member-card_small__name">Александр Громов</div>
+																<div class="member-card_small__job-tittle">соучредитель</div>
+															</div>
+														</div>
+													</li>
+												</ul>
 											</div>
 										</div>
 										<div class="section__sub-container_agency">
@@ -221,7 +284,7 @@
 												</div>
 											</div>
 										</div>
-									</div>
+									</section>
 								</div>
 							</main>
 							<footer class="footer">
@@ -268,17 +331,17 @@
 								</div>
 							</footer>
 						</div>
-						<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-				Text
-			</div>
-		</div>
-	</div>
-</div> -->
-						<script src="js/app.min.js?_v=20221226222839"></script>
+						<div id="popup" aria-hidden="true" class="popup">
+							<div class="popup__wrapper">
+								<div class="popup__content">
+									<button data-close type="button" class="popup__close">Закрыть</button>
+									<div class="popup__text">
+										Text
+									</div>
+								</div>
+							</div>
+						</div>
+						<script src="js/app.min.js?_v=20230111230249"></script>
 					</body>
 
 					</html>
