--- a/design.html
+++ b/design.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221226222839">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230111230249">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,11 +69,13 @@
 
 			<section class="section-webdev">
 				<div class="webdev-section__container">
-					<div class="webdev-section__tag-list tag-list">
-						<div class="card__tag_webdev">Разработка</div>
-						<div class="card__tag_webdev">Веб-дизайн</div>
+					<div class="webdev-section__webdev-header-container">
+						<div class="webdev-section__tag-list tag-list">
+							<div class="card__tag_webdev">Разработка</div>
+							<div class="card__tag_webdev">Веб-дизайн</div>
+						</div>
+						<div class="webdev-section__webdev-tittle">Корпоративный сайт юридической фирмы IPLC</div>
 					</div>
-					<div class="webdev-section__webdev-tittle">Корпоративный сайт юридической фирмы IPLC</div>
 				</div>
 				<picture><source srcset="img/website-example/tittlebg.webp" type="image/webp"><img class="webdev-section__bg-image" src="img/website-example/tittlebg.png" alt=""></picture>
 				<div class="section-goals__container-flex-columns container-flex-columns">
@@ -298,17 +300,17 @@
 			</div>
 		</footer>
 	</div>
-	<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-				Text
+	<div id="popup" aria-hidden="true" class="popup">
+		<div class="popup__wrapper">
+			<div class="popup__content">
+				<button data-close type="button" class="popup__close">Закрыть</button>
+				<div class="popup__text">
+					Text
+				</div>
 			</div>
 		</div>
 	</div>
-</div> -->
-	<script src="js/app.min.js?_v=20221226222839"></script>
+	<script src="js/app.min.js?_v=20230111230249"></script>
 </body>
 
 </html>
